--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "autoprefixer": "^9.1.0",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.0.5",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-expect-file": "^1.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
     "postcss-flexibility": "^2.0.0",
     "postcss-object-fit-images": "^1.1.2",
     "pump": "^3.0.0"
+  },
+  "dependencies": {
+    "gulp-sass": "^4.0.1"
   }
 }
